cluster/apps/platform/homebox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebox
  namespace: homebox
  labels:
    app.kubernetes.io/name: homebox
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: homebox
